--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.66.0",
+    "@wix/ecom": "^1.0.910",
+    "@wix/media": "^1.0.144",
+    "@wix/members": "^1.0.181",
+    "@wix/reviews": "^1.0.53",
+    "@wix/sdk": "^1.15.9",
+    "@wix/stores": "^1.0.347",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
